--- a/nbs/00_download_processed.ipynb
+++ b/nbs/00_download_processed.ipynb
@@ -10,6 +10,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODOs\n",
+    "- [ ] Add cache to use_get_projects:\n",
+    "      maybe something like this:\n",
+    "      \n",
+    "```python\n",
+    "#| export\n",
+    "from joblib import Memory\n",
+    "      import os\n",
+    "\n",
+    "      memory = Memory(location=\".cache\", verbose=0)\n",
+    "\n",
+    "      @memory.cache\n",
+    "      def get_projects_cached(acc):\n",
+    "          return geo.get_projects(acc)\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
