--- a/nbs/00_download_processed.ipynb
+++ b/nbs/00_download_processed.ipynb
@@ -79,6 +79,7 @@
     }
    ],
    "source": [
+    "#| export\n",
     "geo=Geofetcher(just_metadata=True)\n",
     "acc = 'GSE51239'"
    ]
@@ -155,6 +156,7 @@
     }
    ],
    "source": [
+    "#|eval: false\n",
     "projects = geo.use_get_projects(acc)\n",
     "projects"
    ]
