--- a/nbs/00_download_processed.ipynb
+++ b/nbs/00_download_processed.ipynb
@@ -62,6 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "from geofetch import Geofetcher"
    ]
   },
@@ -79,7 +80,7 @@
     }
    ],
    "source": [
-    "#| export\n",
+    "#| show_doc\n",
     "geo=Geofetcher(just_metadata=True)\n",
     "acc = 'GSE51239'"
    ]
