--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from bs_dna_methyl.core import *"
+    "from bs_dna_methyl.download_processed import *"
    ]
   },
   {
