subclass of Geofetch

--- a/nbs/00_download_processed.ipynb
+++ b/nbs/00_download_processed.ipynb
@@ -10,27 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# TODOs\n",
-    "- [ ] Add cache to use_get_projects:\n",
-    "      maybe something like this:\n",
-    "      \n",
-    "```python\n",
-    "#| export\n",
-    "from joblib import Memory\n",
-    "      import os\n",
-    "\n",
-    "      memory = Memory(location=\".cache\", verbose=0)\n",
-    "\n",
-    "      @memory.cache\n",
-    "      def get_projects_cached(acc):\n",
-    "          return geo.get_projects(acc)\n",
-    "```\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -63,7 +42,42 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "from geofetch import Geofetcher"
+    "from geofetch import Geofetcher as OriginalGeofetcher\n",
+    "from tenacity import retry, wait_exponential, stop_after_attempt \n",
+    "from joblib import Memory\n",
+    "\n",
+    "memory = Memory(\".cache\", verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "@memory.cache\n",
+    "@retry(\n",
+    "    wait=wait_exponential(multiplier=0.5, min=0.1, max=10),\n",
+    "    stop=stop_after_attempt(10),\n",
+    "    reraise=True\n",
+    ")\n",
+    "def _get_projects_cached(*args, **kwargs):\n",
+    "    fetcher = OriginalGeofetcher()\n",
+    "    return fetcher.get_projects(*args, **kwargs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "class Geofetcher(OriginalGeofetcher):\n",
+    "    \"Patched and extended version of Geofetcher class from `geofetcher`.\"\n",
+    "    def get_projects(self, *args, **kwargs):\n",
+    "        return _get_projects_cached(*args, **kwargs)\n"
    ]
   },
   {
@@ -75,7 +89,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] [17:38:28] Metadata folder: /home/magistak/bs-dna-methyl/nbs/project_name\n"
+      "[INFO] [15:31:53] Metadata folder: /home/magistak/bs-dna-methyl/nbs/project_name\n"
      ]
     }
    ],
@@ -89,60 +103,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "import time, random\n",
-    "def use_get_projects(self, acc, max_attempts=10):\n",
-    "    \"Added randomly timed retries to `Geofetcher.get_projects`, so it works.\"\n",
-    "    try:\n",
-    "        return self.get_projects(acc)\n",
-    "    except Exception as e:\n",
-    "        if max_attempts <=1:\n",
-    "            raise\n",
-    "        delay = max(0.1, random.normalvariate(1, 0.5))\n",
-    "        time.sleep(delay)\n",
-    "        return self.use_get_projects(acc, max_attempts - 1)\n",
-    "    \n",
-    "Geofetcher.use_get_projects = use_get_projects"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[INFO] [17:41:22] Trying GSE51239 (not a file) as accession...\n",
-      "[INFO] [17:41:22] Trying GSE51239 (not a file) as accession...\n",
-      "[INFO] [17:41:22] Skipped 0 accessions. Starting now.\n",
-      "[INFO] [17:41:22] \u001b[38;5;200mProcessing accession 1 of 1: 'GSE51239'\u001b[0m\n",
-      "[INFO] [17:41:33] Trying GSE51239 (not a file) as accession...\n",
-      "[INFO] [17:41:33] Trying GSE51239 (not a file) as accession...\n",
-      "[INFO] [17:41:33] Skipped 0 accessions. Starting now.\n",
-      "[INFO] [17:41:33] \u001b[38;5;200mProcessing accession 1 of 1: 'GSE51239'\u001b[0m\n",
-      "[INFO] [17:41:43] Trying GSE51239 (not a file) as accession...\n",
-      "[INFO] [17:41:43] Trying GSE51239 (not a file) as accession...\n",
-      "[INFO] [17:41:43] Skipped 0 accessions. Starting now.\n",
-      "[INFO] [17:41:43] \u001b[38;5;200mProcessing accession 1 of 1: 'GSE51239'\u001b[0m\n",
-      "[INFO] [17:41:54] Trying GSE51239 (not a file) as accession...\n",
-      "[INFO] [17:41:54] Trying GSE51239 (not a file) as accession...\n",
-      "[INFO] [17:41:54] Skipped 0 accessions. Starting now.\n",
-      "[INFO] [17:41:54] \u001b[38;5;200mProcessing accession 1 of 1: 'GSE51239'\u001b[0m\n",
-      "[INFO] [17:42:05] Processed 48 samples.\n",
-      "[INFO] [17:42:05] Expanding metadata list...\n",
-      "[INFO] [17:42:05] Found SRA Project accession: SRP030612\n",
-      "[INFO] [17:42:05] Downloading SRP030612 sra metadata\n",
-      "[INFO] [17:42:11] Parsing SRA file to download SRR records\n",
-      "[INFO] [17:42:11] Dry run, no data will be downloaded\n",
-      "[INFO] [17:42:11] Finished processing 1 accession(s)\n",
-      "[INFO] [17:42:11] Cleaning soft files ...\n",
-      "[INFO] [17:42:11] Creating complete project annotation sheets and config file...\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -157,8 +118,8 @@
     }
    ],
    "source": [
-    "#|eval: false\n",
-    "projects = geo.use_get_projects(acc)\n",
+    "#| show_doc\n",
+    "projects = geo.get_projects(acc)\n",
     "projects"
    ]
   },
